--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-velocity": "^2.1.4",
+    "lucide": "^0.554.0",
+    "lucide-react": "^0.554.0",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
