--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "@ant-design/nextjs-registry": "^1.2.0",
     "@reduxjs/toolkit": "^2.10.1",
     "antd": "^6.0.0",
+    "chart.js": "^4.5.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-velocity": "^2.1.4",
+    "lodash": "^4.17.21",
     "lucide": "^0.554.0",
     "lucide-react": "^0.554.0",
+    "moment": "^2.30.1",
     "next": "15.5.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
@@ -31,6 +35,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/leaflet": "^1.9.21",
+    "@types/lodash": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
